chapter03/grammar.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 16

#include "wae.h"

#define YYSTYPE Expr

static WAE* tree;

#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_EOL(); /* 16 */
YY_RULE(int) yy_WHITE(); /* 15 */
YY_RULE(int) yy_PLUS(); /* 14 */
YY_RULE(int) yy_MINUS(); /* 13 */
YY_RULE(int) yy_WITH(); /* 12 */
YY_RULE(int) yy_RBRACE(); /* 11 */
YY_RULE(int) yy_SPACE(); /* 10 */
YY_RULE(int) yy_OP(); /* 9 */
YY_RULE(int) yy_LBRACE(); /* 8 */
YY_RULE(int) yy_Operation(); /* 7 */
YY_RULE(int) yy_With(); /* 6 */
YY_RULE(int) yy_Id(); /* 5 */
YY_RULE(int) yy_Number(); /* 4 */
YY_RULE(int) yy_WAE(); /* 3 */
YY_RULE(int) yy__(); /* 2 */
YY_RULE(int) yy_Expr(); /* 1 */

YY_ACTION(void) yy_2_OP(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_OP\n"));
   yy = WAE_SUB; ;
}
YY_ACTION(void) yy_1_OP(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_OP\n"));
   yy = WAE_ADD; ;
}
YY_ACTION(void) yy_1_Number(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_Number\n"));
   yy = (Expr) WAENum_new(atoi(yytext)); ;
}
YY_ACTION(void) yy_1_Id(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_Id\n"));
   yy = (Expr) WAEId_new(strdup(yytext)); ;
}
YY_ACTION(void) yy_1_With(char *yytext, int yyleng)
{
#define b yyval[-1]
#define e yyval[-2]
#define i yyval[-3]
  yyprintf((stderr, "do yy_1_With\n"));
   yy = (Expr) WAEWith_new((WAEId*) i, (WAE*) e, (WAE*) b); ;
#undef b
#undef e
#undef i
}
YY_ACTION(void) yy_1_Operation(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
#define o yyval[-3]
  yyprintf((stderr, "do yy_1_Operation\n"));
   yy = (Expr) WAEOp_new(o, (WAE*) l, (WAE*) r); ;
#undef r
#undef l
#undef o
}
YY_ACTION(void) yy_1_Expr(char *yytext, int yyleng)
{
#define ae yyval[-1]
  yyprintf((stderr, "do yy_1_Expr\n"));
   tree = (WAE*) ae; ;
#undef ae
}

YY_RULE(int) yy_EOL()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "EOL"));
  {  int yypos2= yypos, yythunkpos2= yythunkpos;  if (!yymatchString("\r\n")) goto l3;  goto l2;
  l3:;	  yypos= yypos2; yythunkpos= yythunkpos2;  if (!yymatchChar('\n')) goto l4;  goto l2;
  l4:;	  yypos= yypos2; yythunkpos= yythunkpos2;  if (!yymatchChar('\r')) goto l1;
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "EOL", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOL", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_WHITE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "WHITE"));
  {  int yypos6= yypos, yythunkpos6= yythunkpos;  if (!yymatchChar(' ')) goto l7;  goto l6;
  l7:;	  yypos= yypos6; yythunkpos= yythunkpos6;  if (!yymatchChar('\t')) goto l8;  goto l6;
  l8:;	  yypos= yypos6; yythunkpos= yythunkpos6;  if (!yy_EOL()) goto l5;
  }
  l6:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "WHITE", yybuf+yypos));
  return 1;
  l5:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "WHITE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_PLUS()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "PLUS"));  if (!yymatchChar('+')) goto l9;
  yyprintf((stderr, "  ok   %s @ %s\n", "PLUS", yybuf+yypos));
  return 1;
  l9:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "PLUS", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_MINUS()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "MINUS"));  if (!yymatchChar('-')) goto l10;
  yyprintf((stderr, "  ok   %s @ %s\n", "MINUS", yybuf+yypos));
  return 1;
  l10:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "MINUS", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_WITH()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "WITH"));  if (!yymatchString("with")) goto l11;
  yyprintf((stderr, "  ok   %s @ %s\n", "WITH", yybuf+yypos));
  return 1;
  l11:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "WITH", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_RBRACE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "RBRACE"));  if (!yymatchChar('}')) goto l12;
  yyprintf((stderr, "  ok   %s @ %s\n", "RBRACE", yybuf+yypos));
  return 1;
  l12:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "RBRACE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_SPACE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "SPACE"));  if (!yy_WHITE()) goto l13;
  l14:;	
  {  int yypos15= yypos, yythunkpos15= yythunkpos;  if (!yy_WHITE()) goto l15;  goto l14;
  l15:;	  yypos= yypos15; yythunkpos= yythunkpos15;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "SPACE", yybuf+yypos));
  return 1;
  l13:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "SPACE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_OP()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "OP"));
  {  int yypos17= yypos, yythunkpos17= yythunkpos;  if (!yy_PLUS()) goto l18;  yyDo(yy_1_OP, yybegin, yyend);  goto l17;
  l18:;	  yypos= yypos17; yythunkpos= yythunkpos17;  if (!yy_MINUS()) goto l16;  yyDo(yy_2_OP, yybegin, yyend);
  }
  l17:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "OP", yybuf+yypos));
  return 1;
  l16:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "OP", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_LBRACE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "LBRACE"));  if (!yymatchChar('{')) goto l19;
  yyprintf((stderr, "  ok   %s @ %s\n", "LBRACE", yybuf+yypos));
  return 1;
  l19:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "LBRACE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Operation()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 3, 0);
  yyprintf((stderr, "%s\n", "Operation"));  if (!yy_LBRACE()) goto l20;  if (!yy__()) goto l20;  if (!yy_OP()) goto l20;  yyDo(yySet, -3, 0);  if (!yy_SPACE()) goto l20;  if (!yy_WAE()) goto l20;  yyDo(yySet, -2, 0);  if (!yy_SPACE()) goto l20;  if (!yy_WAE()) goto l20;  yyDo(yySet, -1, 0);  if (!yy__()) goto l20;  if (!yy_RBRACE()) goto l20;  if (!yy__()) goto l20;  yyDo(yy_1_Operation, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "Operation", yybuf+yypos));  yyDo(yyPop, 3, 0);
  return 1;
  l20:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Operation", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_With()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 3, 0);
  yyprintf((stderr, "%s\n", "With"));  if (!yy_LBRACE()) goto l21;  if (!yy__()) goto l21;  if (!yy_WITH()) goto l21;  if (!yy_SPACE()) goto l21;  if (!yy_LBRACE()) goto l21;  if (!yy__()) goto l21;  if (!yy_Id()) goto l21;  yyDo(yySet, -3, 0);  if (!yy_SPACE()) goto l21;  if (!yy_WAE()) goto l21;  yyDo(yySet, -2, 0);  if (!yy__()) goto l21;  if (!yy_RBRACE()) goto l21;  if (!yy_SPACE()) goto l21;  if (!yy_WAE()) goto l21;  yyDo(yySet, -1, 0);  if (!yy__()) goto l21;  if (!yy_RBRACE()) goto l21;  if (!yy__()) goto l21;  yyDo(yy_1_With, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "With", yybuf+yypos));  yyDo(yyPop, 3, 0);
  return 1;
  l21:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "With", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Id()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "Id"));  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l22;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\040\377\203\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l22;
  l23:;	
  {  int yypos24= yypos, yythunkpos24= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\040\377\203\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l24;  goto l23;
  l24:;	  yypos= yypos24; yythunkpos= yythunkpos24;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l22;  yyDo(yy_1_Id, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "Id", yybuf+yypos));
  return 1;
  l22:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Id", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Number()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "Number"));  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l25;
  {  int yypos26= yypos, yythunkpos26= yythunkpos;  if (!yy_MINUS()) goto l26;  goto l27;
  l26:;	  yypos= yypos26; yythunkpos= yythunkpos26;
  }
  l27:;	  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;
  l28:;	
  {  int yypos29= yypos, yythunkpos29= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l29;  goto l28;
  l29:;	  yypos= yypos29; yythunkpos= yythunkpos29;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l25;  yyDo(yy_1_Number, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "Number", yybuf+yypos));
  return 1;
  l25:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Number", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_WAE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "WAE"));
  {  int yypos31= yypos, yythunkpos31= yythunkpos;  if (!yy_Number()) goto l32;  goto l31;
  l32:;	  yypos= yypos31; yythunkpos= yythunkpos31;  if (!yy_Id()) goto l33;  goto l31;
  l33:;	  yypos= yypos31; yythunkpos= yythunkpos31;  if (!yy_With()) goto l34;  goto l31;
  l34:;	  yypos= yypos31; yythunkpos= yythunkpos31;  if (!yy_Operation()) goto l30;
  }
  l31:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "WAE", yybuf+yypos));
  return 1;
  l30:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "WAE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy__()
{
  yyprintf((stderr, "%s\n", "_"));
  l36:;	
  {  int yypos37= yypos, yythunkpos37= yythunkpos;  if (!yy_WHITE()) goto l37;  goto l36;
  l37:;	  yypos= yypos37; yythunkpos= yythunkpos37;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "_", yybuf+yypos));
  return 1;
}
YY_RULE(int) yy_Expr()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Expr"));  if (!yy__()) goto l38;  if (!yy_WAE()) goto l38;  yyDo(yySet, -1, 0);  if (!yy__()) goto l38;  yyDo(yy_1_Expr, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "Expr", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l38:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Expr", yybuf+yypos));
  return 0;
}

#ifndef YY_PART

typedef int (*yyrule)();

YY_PARSE(int) YYPARSEFROM(yyrule yystart)
{
  int yyok;
  if (!yybuflen)
    {
      yybuflen= 1024;
      yybuf= malloc(yybuflen);
      yytextlen= 1024;
      yytext= malloc(yytextlen);
      yythunkslen= 32;
      yythunks= malloc(sizeof(yythunk) * yythunkslen);
      yyvalslen= 32;
      yyvals= malloc(sizeof(YYSTYPE) * yyvalslen);
      yybegin= yyend= yypos= yylimit= yythunkpos= 0;
    }
  yybegin= yyend= yypos;
  yythunkpos= 0;
  yyval= yyvals;
  yyok= yystart();
  if (yyok) yyDone();
  yyCommit();
  return yyok;
  (void)yyrefill;
  (void)yymatchDot;
  (void)yymatchChar;
  (void)yymatchString;
  (void)yymatchClass;
  (void)yyDo;
  (void)yyText;
  (void)yyDone;
  (void)yyCommit;
  (void)yyAccept;
  (void)yyPush;
  (void)yyPop;
  (void)yySet;
  (void)yytextmax;
}

YY_PARSE(int) YYPARSE(void)
{
  return YYPARSEFROM(yy_Expr);
}

#endif


WAE* WAE_parse() {
  if (!yyparse()) {
    printf("parse error!\n");
    return NULL;
  }

  return tree;
}

